style.css
.header h1 {
  /*color: #d54d7b;*/
  font-family: "Great Vibes", cursive;
  font-size: 165px;
  line-height: 160px;
  font-weight: normal;
  margin-bottom: 0px;
  margin-top: 40px;
  text-align: center;
  text-shadow: 5px 5px #558ABB;
  /* text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;*/
}

.header h2 {
  /*color: #111;*/
  font-family: 'Open Sans', sans-serif;
  font-size: 40px;
  font-weight: 300;
  line-height: 32px;
  margin: 0 0 72px;
  text-align: center;
  text-shadow: 5px 5px 10px black;
}

p, label {
  /*color: #685206;*/
  font-family: Monospace;
  font-size: 24px;
  line-height: 24px;
  font-weight: bold;
  margin: 0 0 24px;
  text-align: justify;
  text-justify: inter-word;
  text-align: center;
  text-shadow: 5px 5px 20px gray;
  color: #000;
}

body {}

.webbg {
  background: url(assets/bg2.jpeg);
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.nav-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.nav-start {
  display: flex;
  justify-content: flex-start;
}

.nav-end {
  display: flex;
  justify-content: flex-end;
}

nav {
  position: fixed;
  top: 2%;
  width: 100%;
  border-radius: 25px;
  /* background-color: #0b98de; */
}

nav.scroll {
  background-color: rgb(100, 145, 175, 0.8);
  /* opacity:30%; */
}

nav a {
  display: inline-block;
  font-family: sans-serif;
  font-size: 40px;
  color: white;
  padding-top: 1vw;
  padding-bottom: 1vw;
  padding-right: 4vw;
  padding-left: 4vw;
  text-decoration: none;
  margin-bottom: 1vw;
  margin-top: 1vw;
  text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;
}

nav a:hover {
  background-color: rgb(0, 44, 117, 0.7);
  border: 1px solid #000;
  border-radius: 25px;
  /* opacity:30%; */
}

.container {
  padding: 3%;
  margin: 0 auto;
  max-width: 90%;
  background-color: rgb(115, 130, 140, 0.5);
  margin-bottom: 15px;
  border-radius: 25px;
}

.header {
  margin-top: 70px;
}

.headerDesc {
  /* background-color: rgb(40, 111, 186, 0.3); */
  background-color: rgb(115, 130, 140, 0.5);
}

#logo {
  display: flex;
  justify-content: flex-start;
  font-family: times;
  font-size: 50px;
  /* letter-spacing: -1px; */
  text-shadow: 1px 1px 2px #c4c4c4;
  padding-left: 20px;
  padding-right: 40px;
  margin-right: 10px;
  color: #000;
  /* margin-top: -20px; */
}

.about {
  padding-left: 5vw;
}

.btnToTop {
  background-color: #0b98de;
  font-family: sans-serif;
  font-size: 40px;
  color: white;
  text-decoration: none;
}

.grid-container {
  /* background: url(./smurfsVillige); */
  opacity: 30%;
  max-height: 30%;
  display: grid;
  grid-template-columns: auto auto auto;
}

.grid-item {
  max-width: 100%;
  margin: 0 auto;
  font-size: 1px;
  object-fit: contain;
}

.avatar {

  display: flex;
  justify-content: center;
  width: 50%;
  margin: 0 auto;
  border: 1px solid #ddd;
  border-radius: 50%;
  padding: 5px;
}

.avatar:hover {
  width: 30%;
  margin: 0 auto;
  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
}

.avatarName {
  font-size: 18px;
  font-style: oblique;
  font-weight: bold;
  text-align: center;
  margin: 0 auto;
  width: 35%;
  height: 10%;
  justify-content: center;
  display: block;
}

.avatar:hover+.avatarName {
  display: none;
}
.avatarInfo {
  display: none;
}
.avatar:hover~.avatarInfo {
  display: block;
  font-size: 18px;
  font-style: oblique;
  text-align: center;
  margin: 0 auto;
  width: auto;
  height: 10%;
  justify-content: center;
}

textarea {
  width: 100%;
  height: 15%;
}

input[type=text],[type="email"],[type="msg"] {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 7px;
  resize: vertical;
  margin-bottom: 10px;
}

label {
  padding: 12px 12px 12px 0;
  display: inline-block;
}

button[type=submit] {
  background-color: #666790;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  float: right;
}

button[type=submit]:hover {
  background-color: #99a710;
}

.containerForm {
  display: flex;
  padding: 20px;
  width: 70vw;
  justify-content: center;
  /* margin-left: 25%; */
}

.col-25 {
  float: left;
  width: 25%;
  margin-top: 6px;
}

.col-75 {
  float: left;
  width: 75%;
  margin-top: 6px;
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

@media only screen and (max-width: 600px) {
  .webbg {
    /* display: none; */
    background: url(none);
    background-color: #fff;
  }
  nav a{
    display:none;
  }

  .header h1{
    font-size: 65px;
    line-height: 120px;
    margin-bottom: -10px;
    margin-top: 70px;
    text-shadow: 1px 1px #558ABB;
  }

  .header h2 {
    font-family: 'Open Sans', sans-serif;
    font-size: 25px;
  }
  .header p {
    font-size: 20px;
  }
  .grid-container{
    grid-template-columns: none;
    grid-row-gap: 40px;
    grid-template-rows: auto auto auto;
  }

}

